# api/openapi.yaml
@@ -74,7 +74,6 @@ paths:
           Fn::Sub: ${ApiRole.Arn}
         type: 'aws_proxy'
       requestBody:
-        description: Create a new pet in the store
         content:
           application/json:
             schema:
@@ -200,9 +199,174 @@ paths:
             format: uuid
       responses:
         '200':
-          description: Successful operation
+          $ref: '#/components/responses/DeleteSuccessResponse'
         '400':
-          description: Invalid ID supplied
+          $ref: '#/components/responses/ValidationError'
+        '404':
+          $ref: '#/components/responses/NotFoundError'
+        '405':
+          $ref: '#/components/responses/MethodNotAllowedError'
+        '500':
+          $ref: '#/components/responses/GeneralError'
+      security:
+        - api_key: []
+
+  /notes:
+    post:
+      tags:
+        - note
+      operationId: createNote
+      summary: Create a new note
+      x-amazon-apigateway-request-validator: body
+      x-amazon-apigateway-integration:
+        uri:
+          Fn::Sub: arn:aws:apigateway:${AWS::Region}:lambda:path/2015-03-31/functions/${CreateNote.Arn}/invocations
+        httpMethod: POST
+        timeoutInMillis: 15000
+        credentials:
+          Fn::Sub: ${ApiRole.Arn}
+        type: 'aws_proxy'
+      requestBody:
+        content:
+          application/json:
+            schema:
+              type: object
+              required:
+                - title
+                - content
+                - collectionId
+              properties:
+                collectionId:
+                  type: string
+                  format: uuid
+                title:
+                  type: string
+                  example: Reminder
+                content:
+                  type: string
+                  example: Do stuff!
+        required: true
+      responses:
+        '200':
+          $ref: '#/components/responses/NoteResponse'
+        '400':
+          $ref: '#/components/responses/ValidationError'
+        '405':
+          $ref: '#/components/responses/MethodNotAllowedError'
+        '500':
+          $ref: '#/components/responses/GeneralError'
+      security:
+        - api_key: []
+
+    put:
+      tags:
+        - note
+      operationId: updateNote
+      summary: Update an existing note
+      x-amazon-apigateway-request-validator: body
+      requestBody:
+        description: Updated note params
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/Note'
+        required: true
+      x-amazon-apigateway-integration:
+        uri:
+          Fn::Sub: arn:aws:apigateway:${AWS::Region}:lambda:path/2015-03-31/functions/${UpdateNote.Arn}/invocations
+        httpMethod: POST
+        timeoutInMillis: 15000
+        credentials:
+          Fn::Sub: ${ApiRole.Arn}
+        type: 'aws_proxy'
+      responses:
+        '200':
+          $ref: '#/components/responses/NoteResponse'
+        '400':
+          $ref: '#/components/responses/ValidationError'
+        '404':
+          $ref: '#/components/responses/NotFoundError'
+        '405':
+          $ref: '#/components/responses/MethodNotAllowedError'
+        '500':
+          $ref: '#/components/responses/GeneralError'
+      security:
+        - api_key: []
+
+  /collections/{collectionId}/notes:
+    get:
+      tags:
+        - note
+      operationId: listNotesByCollectionId
+      summary: List all notes
+      description: Lists all available notes in a collection
+      x-amazon-apigateway-integration:
+        uri:
+          Fn::Sub: arn:aws:apigateway:${AWS::Region}:lambda:path/2015-03-31/functions/${ListNotes.Arn}/invocations
+        httpMethod: POST
+        timeoutInMillis: 15000
+        credentials:
+          Fn::Sub: ${ApiRole.Arn}
+        type: 'aws_proxy'
+      parameters:
+        - name: collectionId
+          in: path
+          description: ID of the collection whose notes needs to be fetched
+          required: true
+          schema:
+            type: string
+            format: uuid
+      responses:
+        '200':
+          description: Successful operation
+          content:
+            application/json:
+              schema:
+                type: array
+                items:
+                  $ref: '#/components/schemas/Note'
+        '405':
+          $ref: '#/components/responses/MethodNotAllowedError'
+        '500':
+          $ref: '#/components/responses/GeneralError'
+      security:
+        - api_key: []
+
+  /collections/{collectionId}/notes/{noteId}:
+    delete:
+      tags:
+        - note
+      operationId: deleteNote
+      summary: Delete note
+      x-amazon-apigateway-request-validator: params
+      x-amazon-apigateway-integration:
+        uri:
+          Fn::Sub: arn:aws:apigateway:${AWS::Region}:lambda:path/2015-03-31/functions/${DeleteNote.Arn}/invocations
+        httpMethod: POST
+        timeoutInMillis: 15000
+        credentials:
+          Fn::Sub: ${ApiRole.Arn}
+        type: 'aws_proxy'
+      parameters:
+        - name: collectionId
+          in: path
+          description: ID of the collection the note that needs to be deleted is in
+          required: true
+          schema:
+            type: string
+            format: uuid
+        - name: noteId
+          in: path
+          description: ID of the note that needs to be deleted
+          required: true
+          schema:
+            type: string
+            format: uuid
+      responses:
+        '200':
+          $ref: '#/components/responses/DeleteSuccessResponse'
+        '400':
+          $ref: '#/components/responses/ValidationError'
         '404':
           $ref: '#/components/responses/NotFoundError'
         '405':
@@ -245,15 +409,21 @@ components:
       allOf:
         - type: object
           required:
+            - collectionId
             - noteId
-            - type
-            - value
+            - title
+            - content
             - tags
           properties:
+            collectionId:
+              type: string
+              format: uuid
             noteId:
               type: string
               format: uuid
-            value:
+            title:
+              type: string
+            content:
               type: string
             tags:
               type: array
@@ -280,6 +450,21 @@ components:
         application/json:
           schema:
             $ref: '#/components/schemas/Collection'
+    NoteResponse:
+      description: Successful operation
+      content:
+        application/json:
+          schema:
+            $ref: '#/components/schemas/Note'
+    DeleteSuccessResponse:
+      description: Successful delete
+      content:
+        application/json:
+          schema:
+            properties:
+              id:
+                type: string
+                format: uuid
     GeneralError:
       description: Error returned in case of Server Error
       content:
